# Receipts_App

./: .gitignore  DEPLOYMENT_CHEAT_SHEET.md  IMPLEMENTATION_COMPLETE_BACKEND.md  NEWSROOM_DEPLOYMENT_GUIDE.md  NEWSROOM_IMPLEMENTATION_STATUS.md  ORGANIZATION_STORE_COMPLETE.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0002_password_reset_tokens.py  0003_add_organizations.py  0004_add_newsroom_receipt_fields.py  ed60b3290183_initial_schema.py
backend/app/: __init__.py  main.py  main.py.bak
backend/app/api/: __init__.py  health.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  evidence.py  exports.py  feed.py  investigations.py  moderation.py  notifications.py  organizations.py  reactions.py  receipts.py  router.py  search.py  topics.py  uploads.py  users.py
backend/app/core/: __init__.py  config.py  config.py.bak  dependencies.py  dependencies.py.bak  logging.py  middleware.py  permissions.py  rate_limit.py  security.py
backend/app/db/: __init__.py  session.py  session.py.bak
backend/app/db/repositories/: __init__.py  base.py  export.py  notification.py  reaction.py  receipt.py  report.py  topic.py  user.py
backend/app/models/: __init__.py  enums.py
backend/app/models/db/: __init__.py  base.py  export.py  investigation.py  notification.py  organization.py  password_reset.py  reaction.py  receipt.py  report.py  topic.py  user.py
backend/app/models/schemas/: __init__.py  auth.py  base.py  evidence.py  export.py  feed.py  moderation.py  notification.py  reaction.py  receipt.py  topic.py  upload.py  user.py
backend/app/services/: __init__.py  auth_service.py  email_service.py  export_service.py  feed_service.py  investigation_service.py  media_service.py  moderation_service.py  organization_service.py  reaction_service.py  receipt_service.py  reconciliation_service.py  topic_service.py  user_service.py
backend/app/tests/: conftest.py
backend/app/tests/api/: test_admin.py  test_auth.py  test_exports.py  test_feed.py  test_moderation.py  test_notifications.py  test_reactions.py  (+5 more)
backend/scripts/: dev_run.sh  reconcile_counts.py  seed_db.py
(+86 files in other folders)
